# CS430

./: .gitignore  CMakeLists.txt  README.md
ch02/: .vimrc  CMakeLists.txt  binary_search.h  ex2-4.d.cpp  ex2.3-2.c  ex2.3-4.c  ex2.3-7.cpp  exercise.md  insertion_sort.c  merge_sort.c  selection_sort.cpp
ch03/: ex3.1-1.md  ex3.1-4.md  ex3.1-5.md  ex3.1-6.md  ex3.1-7.md  ex3.2-3.md  ex3.2-5.md  ex3.2-7.md  exercises.md  extra.md  problems.md
ch04/: ex4.1-4.c  ex4.1-5.cpp  exercises.md  find_maximum_subarray.c  square_matrix_multiply.c
ch06/: ex6.2-2.c  exercises.md  heapsort.c
